added restaurant details page and other apis

--- a/Frontend/zomatoapitask/src/Components/Home/index.css
+++ b/Frontend/zomatoapitask/src/Components/Home/index.css
@@ -101,3 +101,12 @@ body{
     text-decoration: none;
     color:black;
 }
+.filters-form-container{
+    display: flex;
+    justify-content: space-between;
+    width:100%;
+    margin:10px;
+}
+.filters-container{
+    width:90%;
+}
