--- a/Frontend/zomatoapitask/src/Components/RestaurantDetailPage/index.css
+++ b/Frontend/zomatoapitask/src/Components/RestaurantDetailPage/index.css
@@ -31,9 +31,14 @@
 .list-container-rdp{
     padding-left: 0;
     list-style-type: none;
+    text-align: right;
+    width:50%;
 }
 .list-item{
     margin:10px;
     font-size:20px;
     font-family: "Roboto";
+}
+.icon{
+    color:white;
 }
