--- a/Frontend/zomatoapitask/src/Components/Home/index.css
+++ b/Frontend/zomatoapitask/src/Components/Home/index.css
@@ -56,10 +56,12 @@ body{
 .restaurant-card{
     font-family:"Roboto";
     margin:10px;
+    transition: all 0.3s;
 }
 .restaurant-card:hover{
-    border:2px solid black;
+    box-shadow:0px 0px 8px 8px grey;
     border-radius:5px;
+    transform: scale(1.07);
     padding:10px;
 }
 .restaurant-image{
